# hello-faceless-content

./: .env.example  CLAUDE.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
data/database/: app.db
docs/: overview.md  phase1-foundation.md  setup.md
scripts/: init_db.py
src/config/: prompts.py  settings.py
src/core/content/: script_generator.py  script_parser.py  topic_selector.py
src/core/llm/: base.py  bedrock.py  claude.py  manager.py  openai.py
src/models/: approval.py  content.py  database.py  job.py
src/utils/: cache.py  file_manager.py  logger.py
