[project]
name = "hello-faceless-content"
version = "0.1.0"
description = "AI-powered faceless video automation system"
requires-python = ">=3.11"
authors = [
    {name = "Tanvir Hossain"}
]
readme = "README.md"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
